wip use threejs

--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Fluid Particles</title>
 
-        <meta name="description" content="Real-time particle-based 3D fluid simulation and rendering using WebGL.">
+<head>
+    <meta charset="utf-8">
+    <title>Fluid Particles</title>
 
-        <link href='https://fonts.googleapis.com/css?family=Asap:400,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="flip.css"/>
-    </head>
+    <meta name="description" content="Real-time particle-based 3D fluid simulation and rendering using WebGL.">
 
-    <body>
-        <script type="text/template" id="main">
+    <link href='https://fonts.googleapis.com/css?family=Asap:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="flip.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.144.0/three.min.js"
+        integrity="sha512-a+99cBAt+ou5bThiz5wJeuvXSrZVqZctMU5L8MWaLEc3PB+DPWMK3UycRong0zWYyhavY8HT0YyB/jtJD1S/yQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+</head>
+
+<body>
+
+
+
+    <script type="text/template" id="main">
             <style>
                 .editing-ui {
                     display: none;
@@ -62,7 +70,7 @@
             </div>
         </script>
 
-        <script type="text/template" id="no-support">
+    <script type="text/template" id="no-support">
             <div id="container">
                 <div id="error"></div>
                 <div id="video">You can still view a video.<br/>
@@ -73,52 +81,54 @@
         </script>
 
 
-        <div id="placeholder"></div>
+    <div id="placeholder"></div>
 
 
-        <script src="wrappedgl.js"></script>
-        <script src="utilities.js"></script>
-        <script src="camera.js"></script>
-        <script src="boxeditor.js"></script>
-        <script src="simulator.js"></script>
-        <script src="renderer.js"></script>
-        <script src="simulatorrenderer.js"></script>
-        <script src="slider.js"></script>
-        <script src="fluidparticles.js"></script>
+    <!-- <script src="wrappedgl.js"></script> -->
+    <script src="wrappedgl-threejs.js"></script>
+    <script src="utilities.js"></script>
+    <script src="camera.js"></script>
+    <script src="boxeditor.js"></script>
+    <script src="simulator.js"></script>
+    <!-- <script src="renderer.js"></script> -->
+    <script src="renderer-threejs.js"></script>
+    <script src="simulatorrenderer.js"></script>
+    <script src="slider.js"></script>
+    <script src="fluidparticles.js"></script>
 
-        <script>
-            function concatenateWords (list) {
-                if (list.length === 0) {
-                    return '';
-                } else if (list.length === 1) {
-                    return "'" + list[0] + "'";
-                } else {
-                    var result = '';
-                    for (var i = 0; i < list.length; ++i) {
-                        result += "'" + list[i] + "'";
-                        if (i < list.length - 1) {
-                            result += i < list.length - 2 ? ', ' : ' and '
-                        }
+    <script>
+        function concatenateWords(list) {
+            if (list.length === 0) {
+                return '';
+            } else if (list.length === 1) {
+                return "'" + list[0] + "'";
+            } else {
+                var result = '';
+                for (var i = 0; i < list.length; ++i) {
+                    result += "'" + list[i] + "'";
+                    if (i < list.length - 1) {
+                        result += i < list.length - 2 ? ', ' : ' and '
                     }
+                }
 
-                    return result;
+                return result;
+            }
+        }
+
+        WrappedGL.checkWebGLSupportWithExtensions(['ANGLE_instanced_arrays', 'WEBGL_depth_texture', 'OES_texture_float', 'OES_texture_float_linear', 'OES_texture_half_float', 'OES_texture_half_float_linear'],
+            function () { //we have webgl
+                document.getElementById('placeholder').outerHTML = document.getElementById('main').innerHTML;
+                var fluidBox = new FluidParticles();
+            }, function (hasWebGL, unsupportedExtensions) {
+                document.getElementById('placeholder').outerHTML = document.getElementById('no-support').innerHTML;
+                if (!hasWebGL) { //webgl not supported
+                    document.getElementById('error').textContent = 'Unfortunately, your browser does not support WebGL';
+                } else {
+                    document.getElementById('error').textContent = 'Unfortunately, your browser does not support the ' + concatenateWords(unsupportedExtensions) + " WebGL extension" + (unsupportedExtensions.length > 1 ? 's.' : '.');
                 }
             }
-
-            WrappedGL.checkWebGLSupportWithExtensions(['ANGLE_instanced_arrays', 'WEBGL_depth_texture', 'OES_texture_float', 'OES_texture_float_linear', 'OES_texture_half_float', 'OES_texture_half_float_linear'],
-                function () { //we have webgl
-                    document.getElementById('placeholder').outerHTML = document.getElementById('main').innerHTML;
-                    var fluidBox = new FluidParticles();
-                }, function (hasWebGL, unsupportedExtensions) {
-                    document.getElementById('placeholder').outerHTML = document.getElementById('no-support').innerHTML;
-                    if (!hasWebGL) { //webgl not supported
-                        document.getElementById('error').textContent = 'Unfortunately, your browser does not support WebGL';
-                    } else {
-                        document.getElementById('error').textContent = 'Unfortunately, your browser does not support the ' + concatenateWords(unsupportedExtensions) + " WebGL extension" + (unsupportedExtensions.length > 1 ? 's.' : '.');
-                    }
-                }
-            );
-        </script>
-    </body>
+        );
+    </script>
+</body>
 
 </html>
